# atomic

./: LICENSE  README.md  __init__.py  constants.py  pyproject.toml  setup.cfg
examples/: annihilation_demo.py  galaxysim.py  galaxysim_lite.py
particles/: base.py  bosons.py  hadrons.py  leptons.py  quarks.py
periodic/: base.py  elements.py
radiation/: alpha.py  base.py  beta.py  gamma.py
reactions/: annihilation.py  base.py  decay_chain.py  fission.py  fusion.py  validator.py
stellar/: burning.py  core.py
