[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atomic"
version = "0.1.0"
description = "Physics and stellar simulation library."
authors = [{name="THE KITTEN"}]
requires-python = ">=3.10"
license = {text="MIT"}
readme = "README.md"
keywords = ["physics", "simulation", "galaxy", "pygame", "numpy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.24",
    "pygame>=2.3",
]