[metadata]
name = atomic
version = 0.1.0
description = Physics and stellar simulation library
long_description = file: README.md
long_description_content_type = text/markdown
author = Sidharth
license = MIT
python_requires = >=3.10

[options]
packages = find:
install_requires =
    numpy>=1.24
    pygame>=2.3
zip_safe = false